# rs-short

./: .gitignore  Cargo.toml  Dockerfile  README.md  banned_url_from.list  banned_url_to.list  config.toml.sample  lang.json  lists.toml  url_to_blacklist.txt
.gitea/workflows/: release.yml
assets/: base.css
assets/themes/dark/: base.css
assets/themes/light/: base.css
assets/themes/nav/: navbar-custom.css
src/: cache.rs  config.rs  cookies.rs  database.rs  db_schema.rs  error_handlers.rs  form.rs  handlers.rs  init.rs  link.rs  main.rs  spam.rs  structs.rs  templates.rs  tests.rs
templates/: head.hbs  home.hbs  home.html  layout.hbs  layout.html  phishing.html
