[package]
name = "rs-short"
version = "3.0.0"
edition = "2021"

[features]
default = [ "diesel/sqlite" ]
postgres = [ "diesel/postgres" ]
mysql = [ "diesel/mysql" ]
sqlite = [ "diesel/sqlite" ]

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
actix-session = { version = "0.6", features = ["cookie-session"] }
askama = "0.11"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_regex = "1.1"
toml = "0.5"
lazy_static = "1.4"
captcha = "0.0.8"
rand = "0.8"
diesel = { version = "1.4", features = ["r2d2", "chrono"] }
diesel_migrations = "1.4"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.13"

[dependencies.regex]
version = "1.5"
default-features = false
features = ["std", "perf"]
