[package]
name = "rs-short"
version = "3.1.0"
edition = "2021"

[features]
default = [ "sqlite" ]
postgres = [ "diesel/postgres" ]
mysql = [ "diesel/mysql" ]
sqlite = [ "diesel/sqlite", "libsqlite3-sys" ]

[dependencies]
actix-web = "4.1"
actix-files = "0.6"
actix-session = { version = "0.7", features = ["cookie-session"] }
askama = "0.11"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_regex = "1.1"
toml = "0.5"
once_cell = "1.15"
rand = "0.8"
diesel = { version = "2.0", features = ["r2d2", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.0"
chrono = { version = "0.4", features = ["serde"], default-features = false }
libsqlite3-sys = { version = ">=0.17.2, <0.26.0", optional = true, features = ["bundled_bindings", "bundled"] }
base64 = "0.13"

[dependencies.captcha]
version = "0.0.9"
default-features = false

[dependencies.regex]
version = "1.6"
default-features = false
features = ["std", "perf"]